# PandaBallBalancing

./: .gitignore  Cerchi qualcosa?
control/: CMakeLists.txt  package.xml
control/include/control/: quintic.hpp
control/src/: clik.cpp  controller_lqg.cpp  controller_lqg_int.cpp  controller_lqg_switch.cpp  controller_pd.cpp  handler.cpp  home_server.cpp
interfaces/: CMakeLists.txt  package.xml
interfaces/action/: Home.action
interfaces/srv/: SetDes.srv
reinforcement_learning/: CMakeLists.txt  package.xml
reinforcement_learning/include/reinforcement_learning/: PolicySystem.h  callPredict.h  eml_rand_mt19937ar.h  eml_rand_mt19937ar_stateful.h  handle.h  loadRLPolicy.h  mySACPolicy.h  mySACPolicy_data.h  mySACPolicy_initialize.h  mySACPolicy_internal_types.h  mySACPolicy_terminate.h  mySACPolicy_types.h  randn.h  rtwtypes.h  unaryElementwise.h
reinforcement_learning/src/: PolicySystem.c  agent.cpp  callPredict.c  eml_rand_mt19937ar.c  eml_rand_mt19937ar_stateful.c  handle.c  loadRLPolicy.c  mySACPolicy.c  mySACPolicy_data.c  mySACPolicy_initialize.c  mySACPolicy_terminate.c  observation.cpp  randn.c  unaryElementwise.c
uclv_robot_lib-main/: CMakeLists.txt  package.xml
uclv_robot_lib-main/include/uclv_robot_lib/: Link.hpp  SerialLink.hpp  exceptions.hpp
uclv_robot_lib-main/include/uclv_robot_lib/links/: Prismatic.hpp  Revolute.hpp
uclv_robot_lib-main/include/uclv_robot_lib/robots/: FrankaEmikaPanda.hpp  LBRiiwa7.hpp  MotomanSIA5F.hpp
uclv_robot_lib-main/src/uclv_robot_lib/: Link.cpp  SerialLink.cpp
uclv_robot_lib-main/src/uclv_robot_lib/links/: Prismatic.cpp  Revolute.cpp
uclv_robot_lib-main/src/uclv_robot_lib/robots/: FrankaEmikaPanda.cpp  LBRiiwa7.cpp  MotomanSIA5F.cpp
